# chum

./: .gitignore  .secrets  ART-AUCTION-SPEC.md  Anchor.toml  CHUM-BIBLE-v2.md  CHUM-BIBLE.md  CLAUDE.md  LICENSE  PIXEL-ART-TRAITS.md  README.md  afternoon-hustle-tweet.txt  chum-cloud-claude-code-prompt.md  histroy.md  package-lock.json  package.json  tweet_draft.txt
backend/: .env.example  fal-batch.ts  fal-batch2.ts  gen-badbunny.ts  gen-flag.ts  gen-illustration.ts  gen-illustration2.ts  package-lock.json  package.json  repair-10.ts  repair-100.ts  repair-20.ts  test-repair.ts  update-twitter-profile.mjs  villain-skill.md
backend/scripts/: add-transfer-delegate.ts  create-art-collection.ts  create-collection-v2.ts  create-mainnet-collection.ts  fix-metadata-uris.ts  fund-irys-mainnet.ts  seed-auction-config.ts  test-e2e.ts  (+6 more)
chum-cloud/: .env.example  .gitignore  README.md  fund-agents.js  package.json  run-all.js  seed-room.js  setup-agents.sh  test-post.js
cli/: package-lock.json  package.json
docs/: TRADING-SPEC.md  ascii-nft-art.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
migrations/: 003_battles.sql  009_chat.sql
programs/chum-auction/: Cargo.toml
programs/chum-auction/src/: errors.rs  lib.rs
programs/chum-auction/src/instructions/: end_epoch.rs  initialize.rs  join_voting.rs  mint_art.rs  mod.rs  place_bid.rs  settle_auction.rs  update_config.rs  vote.rs
programs/chum-auction/src/state/: mod.rs
scripts/: pregen-villains.js
tests/: chum-auction.ts
vps-bridge/: bridge.js  package.json
(+209 files in other folders)
