[package]
name = "chum-auction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chum_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.0", features = ["init-if-needed"] }
anchor-spl = "=0.32.0"
mpl-core = { version = "0.11.1", features = ["serde", "anchor"] }
